@@ -1,15 +1,22 @@
 Function: sqrtint
 Section: number_theoretical
-C-Name: sqrtint
-Prototype: G
-Help: sqrtint(x): integer square root of x, where x is a non-negative integer.
+C-Name: sqrtint0
+Prototype: GD&
+Help: sqrtint(x,{&r}): integer square root y of x, where x is a non-negative
+ integer. If r is present, set it to the remainder x^2 - y.
 Description:
  (gen):int sqrtint($1)
 Doc: returns the integer square root of $x$, i.e. the largest integer $y$
- such that $y^2 \leq x$, where $x$ a non-negative integer.
+ such that $y^2 \leq x$, where $x$ a non-negative integer. If $r$ is present,
+ set it to the remainder $r = x - y^2$, which satisfies $0\leq r \leq 2y
  \bprog
- ? N = 120938191237; sqrtint(N)
+ ? x = 120938191237; sqrtint(x)
  %1 = 347761
- ? sqrt(N)
+ ? sqrt(x)
  %2 = 347761.68741970412747602130964414095216
+ ? y = sqrtint(x, &r)
+ %3 = 347761
+ ? x - y^2
+ %4 = 478116
  @eprog
+Variant: Also available is \fun{GEN}{sqrtint}{GEN a}.
