@@ -2039,6 +2039,7 @@ GEN     rootsof1_Fp(GEN n, GEN p);
 GEN     rootsof1u_Fp(ulong n, GEN p);
 long    sisfundamental(long x);
 GEN     sqrtint(GEN a);
+GEN     sqrtint0(GEN a, GEN *r);
 ulong   u_chinese_coprime(ulong a, ulong b, ulong A, ulong B, ulong C);
 long    uisprimepower(ulong n, ulong *p);
 long    uissquare(ulong A);
