@@ -42,6 +42,12 @@
   *** sqrtn: impossible inverse in Fl_inv: Mod(2, 4).
 1.0000000000000000000000000000000000000
 0
+0
+0
+2
+0
+347761
+478116
 error("not an n-th power residue in Qp_sqrt: 1 + 2 + O(2^2).")
 error("not an n-th power residue in Qp_sqrt: 1 + 2 + O(2^3).")
 error("not an n-th power residue in gsqrt: Mod(2, 11).")
@@ -59,4 +65,4 @@ error("not a prime number in sqrtn [modulus]: 35.")
 [Mod(99, 101), Mod(100, 101)]
 error("not an n-th power residue in gsqrtn: Mod(3, 19).")
 0.E-38
-Total time spent: 100
+Total time spent: 136
