@@ -42,6 +42,13 @@ sqrtn(Mod(2,4),3)
 sqrtn(Mod(2,4),3,&z)
 sqrtn(1, 3)
 sqrtint(0)
+sqrtint(0,&r)
+r
+sqrtint(4,&r)
+r
+sqrtint(120938191237,&r)
+r
+
 iferr(sqrt(3+O(2^2)),E,E)
 iferr(sqrt(3+O(2^3)),E,E)
 iferr(sqrt(Mod(2,11)),E,E)
